<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent_layout"
    tools:context=".JoinActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scroll_view"
        tools:context=".JoinActivity"
        tools:showIn="@layout/activity_join">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_id"
                android:layout_width="300dp"
                android:layout_height="0dp"
                android:hint="@string/id_prompt"
                android:importantForAutofill="no"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_id_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_button"
                android:text="@string/check_id"
                app:layout_constraintStart_toStartOf="@id/edt_id"
                app:layout_constraintTop_toBottomOf="@+id/edt_id"
                tools:ignore="ButtonStyle" />
            <EditText
                android:id="@+id/edt_pw"
                android:layout_width="300dp"
                android:layout_height="0dp"
                android:autofillHints="no"
                android:hint="@string/password_prompt"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_id_check" />

            <EditText
                android:id="@+id/edt_pw2"
                android:layout_width="300dp"
                android:layout_height="0dp"
                android:hint="@string/password_prompt2"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_pw" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="300dp"
                android:layout_height="0dp"
                android:hint="@string/email_prompt"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_pw2" />

            <EditText
                android:id="@+id/edt_bday"
                android:layout_width="300dp"
                android:layout_height="0dp"
                android:hint="@string/birthday_prompt"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_email" />

            <DatePicker
                android:id="@+id/dp_bday"
                    android:layout_width="300dp"
                    android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_bday"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                android:background="@drawable/rounded_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:paddingHorizontal="@dimen/xlarge_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dp_bday" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_back"
                android:background="@drawable/rounded_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:layout_marginTop="@dimen/medium_margin"
                android:paddingHorizontal="@dimen/xlarge_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_register" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>